--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img class="img2" src="images/dice6.png">
       </div>
       <div >
-        <button class="btn" type="button" name="button" onclick="refresh()">ROLL</button>
+        <button class="btn" type="button" name="button" onclick="dice()">ROLL</button>
       </div>
     </div>
 
